<resources>
    <string name="app_name">GameShare</string>
    <string name="title_activity_view_item">ViewItem</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name:    </string>
    <string name="email">Email:   </string>
    <string name="phone">Phone:   </string>
    <string name="userProfile">User Profile</string>
    <string name="login_register">Login/Register</string>
    <string name="addNewItem">Add New Item</string>
    <string name="myItems">My Items</string>
    <string name="filter">Filter</string>
    <string name="platform">Platform: </string>
    <string name="minAge">Min. Age: </string>
    <string name="minPlayers">Players (Min): </string>
    <string name="maxPlayers">Players (Max): </string>
    <string name="minTimeReq">Min. Playtime (hrs): </string>
    <string name="send">Send</string>
    <string name="messageHint">Enter a message...</string>
    <string name="message">Message</string>

    <string name="dialogYes">Yes</string>
    <string name="dialogYesBid">Yes</string>
    <string name="dialogNo">No</string>
    <string name="dialogNoBid">No</string>
    <string name="dialogAccept">Accept</string>
    <string name="dialogDecline">Decline</string>
    <string name="dialogCancel">Cancel</string>

    <!-- FILTER STRINGS -->
    <!-- keey platform names as 1 word to perform must search-->
    <string-array name="platform_array">
        <item>Unspecified</item>
        <item>Board</item>
        <item>Card</item>
        <item>PC</item>
        <item>Playstation3</item>
        <item>Playstation4</item>
        <item>Xbox360</item>
        <item>XboxOne</item>
        <item>Other</item>
    </string-array>

    <string-array name="age_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>

    </string-array>

    <string-array name="players_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="timeReq_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>5</item>
        <item>10</item>
        <item>50</item>
        <item>100</item>
    </string-array>

</resources>
