<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ViewItemsList"
    android:background="@color/colorSlateGrey3">

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/myItemsListView"
        android:layout_below="@+id/filterLinearLayout"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/myItems"
        android:id="@+id/myItemsTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorWhite" />

    <SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/myItemsSearchView"
        android:layout_below="@+id/myItemsTextView"
        android:queryHint="Search..." />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=" Add New Item "
        android:id="@+id/myItemsAddItem"
        android:layout_below="@+id/myItemsListView"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:background="@color/colorLightRed" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/filterLinearLayout"
        android:layout_below="@+id/myItemsSearchView"
        android:layout_alignParentStart="true">


        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/filter"
            android:id="@+id/filterSwitch"
            android:layout_marginRight="8dp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <RelativeLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall">

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/platformFilter"
                    android:text="@string/platform"/>

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/platformSpinner"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_toEndOf="@+id/platformFilter"
                    android:layout_alignTop="@+id/platformFilter"
                    android:layout_alignBottom="@+id/platformFilter"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/minAgeFilter"
                    android:text="@string/minAge"
                    android:layout_below="@+id/platformFilter"/>

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/minAgeSpinner"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_toEndOf="@+id/minTimeFilter"
                    android:layout_alignTop="@+id/minAgeFilter"
                    android:layout_alignBottom="@+id/minAgeFilter"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/minPlayersFilter"
                    android:text="@string/minPlayers"
                    android:layout_below="@+id/minAgeFilter"/>

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/minPlayersSpinner"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_toEndOf="@+id/minTimeFilter"
                    android:layout_alignTop="@+id/minPlayersFilter"
                    android:layout_alignBottom="@+id/minPlayersFilter"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/maxPlayersFilter"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/maxPlayers"
                    android:layout_below="@+id/minPlayersFilter"/>

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/maxPlayersSpinner"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_toEndOf="@+id/minTimeFilter"
                    android:layout_alignTop="@+id/maxPlayersFilter"
                    android:layout_alignBottom="@+id/maxPlayersFilter"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/minTimeFilter"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/minTimeReq"
                    android:layout_below="@+id/maxPlayersFilter"/>

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/minTimeSpinner"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:layout_toEndOf="@+id/minTimeFilter"
                    android:layout_alignTop="@+id/minTimeFilter"
                    android:layout_alignBottom="@+id/minTimeFilter" />

            </RelativeLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>
