<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorDodgerBlue"
    tools:context=".ViewLogIn">

    <TextView
        android:id="@+id/AppName"
        android:layout_width="match_parent"
        android:textSize="40sp"
        android:textAlignment="center"
        android:text="@string/app_name"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="77dp"
        android:textColor="@color/colorDarkOrange"/>

    <TextView
        android:id="@+id/Username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/username"
        android:textSize="25sp"
        android:layout_below="@+id/AppName"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:id="@+id/Password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/Username"
        android:layout_alignParentLeft="true" />

    <EditText
        android:id="@+id/UsernameText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/Username"
        android:layout_toEndOf="@+id/Password" />

    <EditText
        android:id="@+id/PasswordText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Username"
        android:layout_marginTop="10dp"
        android:layout_toEndOf="@+id/Password"
        android:password="true" />

    <Button
        android:id="@+id/Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login/Register"
        android:background="@color/colorSortaRed"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/PasswordText"
        android:layout_centerHorizontal="true" />

</RelativeLayout>